manifests/tempo-load-generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synthetic-load-generator
  namespace: infrastructure
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synthetic_load_generator
      name: synthetic-load-generator
  template:
    metadata:
      labels:
        app: synthetic_load_generator
        name: synthetic-load-generator
    spec:
      containers:
      - env:
        - name: JAEGER_COLLECTOR_URL
          value: http://tempo:14268
        - name: TOPOLOGY_FILE
          value: /conf/load-generator.json
        image: omnition/synthetic-load-generator:1.0.25
        imagePullPolicy: IfNotPresent
        name: synthetic-load-gen
        volumeMounts:
        - mountPath: /conf
          name: conf
      volumes:
      - configMap:
          name: synthetic-load-generator
        name: conf
