manifests/oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      volumes:
        - name: nginx
          configMap:
            name: oauth2-proxy-nginx
      containers:
        - name: nginx
          image: nginx:1.19.3-alpine
          resources:
            limits:
              cpu: 0.2
              memory: 512Mi
          ports:
            - name: nginx
              containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.2
          args:
            - --provider=github
            - --email-domain=*
            - --github-org=<no value>
            - --github-user=<no value>
            - --upstream=file:///dev/null
            - --upstream=http://localhost/redirect/
            - --http-address=0.0.0.0:4180
            - --cookie-domain=.adam.dzsak
            - --footer=-
          ports:
            - containerPort: 4180
              protocol: TCP
              name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: infrastructure
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 80
  selector:
    k8s-app: oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: oauth2-proxy
  namespace: infrastructure
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-oauth2-proxy
      hosts:
        - "auth.adam.dzsak"
  rules:
    - host: "auth.adam.dzsak"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: oauth2-proxy
                port:
                  name: "http"
